--- a/settings.gradle
+++ b/settings.gradle
@@ -9,5 +9,5 @@ include 'kodilla-spring'
 include 'kodilla-spring-web'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
+include 'kodilla-hibernate'
 include 'kodilla-sudoku'
-
