Module Selenium 31.2 theory

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,5 @@ include 'kodilla-patterns2'
 include 'kodilla-jdbc'
 include 'kodilla-hibernate'
 include 'kodilla-sudoku'
+include 'kodilla-testing2'
+
